--- a/R for Data Science/gapminder_report.Rmd
+++ b/R for Data Science/gapminder_report.Rmd
@@ -17,19 +17,19 @@ library(plotly)
 ```
 
 1. Read in the `gapminder_clean.csv` data as a `tibble` using `read_csv`.
-```{r}
+```{r, message=FALSE}
 # load in gapminder dataset
-gapminder <- read_csv("gapminder_clean.csv")
+gapminder <- read_csv("gapminder_clean.csv") %>% column_to_rownames(., var = 'X1')
 head(gapminder)
 ```
 
 2. Filter the data to include only rows where `Year` is `1962` and then make a scatter plot comparing `'CO2 emissions (metric tons per capita)'` and `gdpPercap` for the filtered data.
-```{r}
+```{r, message=FALSE}
 # filter only Year 1962 
 gapminder_1962 <- gapminder %>% filter(Year == "1962")
 
 # plot gdp v CO2
-gapminder_1962 %>% ggplot(aes(gdpPercap,`CO2 emissions (metric tons per capita)`)) + geom_point()
+gapminder_1962 %>% ggplot(aes(gdpPercap,`CO2 emissions (metric tons per capita)`)) + geom_point() +  labs(title = "CO2 emissions by gdpPercap,continent, population size")
 ```
 
 3. On the filtered data, calculate the correlation of `'CO2 emissions (metric tons per capita)'` and `gdpPercap`. What is the correlation and associated p value?
@@ -49,14 +49,37 @@ gapminder_1967 <- gapminder %>% filter(Year=="1967")
 
 5. Using `plotly`, create an interactive scatter plot comparing `'CO2 emissions (metric tons per capita)'` and `gdpPercap`, where the point size is determined by `pop` (population) and the color is determined by the `continent`. You can easily convert any `ggplot` plot to a `plotly` plot using the `ggplotly()` command.
 ```{r}
-plt <- gapminder_1967 %>% ggplot(aes(gdpPercap,`CO2 emissions (metric tons per capita)`, color = continent, size = pop)) + geom_point()
+plt <- gapminder_1967 %>% ggplot(aes(gdpPercap,`CO2 emissions (metric tons per capita)`, color = continent, size = pop)) + geom_point() + labs(title = "CO2 emissions by gdpPercap,continent, population size", color = "continent", size = "")
 ggplotly(plt)
 ```
 
 Now, without further guidance, use your `R` Data Science skills (and appropriate statistical tests) to answer the following:
 
 1. What is the relationship between `continent` and `'Energy use (kg of oil equivalent per capita)'`? (stats test needed)
-2. Is there a significant difference between Europe and Asia with respect to `'Imports of goods and services (% of GDP)'` in the years after 1990? (stats test needed)
-3. What is the country (or countries) that has the highest `'Population density (people per sq. km of land area)'` across all years? (i.e., which country has the highest average ranking in this category across each time point in the dataset?)
-4. What country (or countries) has shown the greatest increase in `'Life expectancy at birth, total (years)'` since 1962? 
 
+The Energy usage between continent is significantly different (p = 2e-16 < 0.05).
+```{r}
+gapminder_contE <- gapminder %>% select(continent, `Energy use (kg of oil equivalent per capita)`) %>% drop_na()
+
+contE_aov <- aov(`Energy use (kg of oil equivalent per capita)` ~ continent, data = gapminder_contE)
+summary(contE_aov)
+```
+
+2. Is there a significant difference between Europe and Asia with respect to `'Imports of goods and services (% of GDP)'` in the years after 1990? (stats test needed)
+
+There is no significant difference (p = 0.1776 > 0.05) between Europe and Asia's Import of goods and services (% of GDP) after 1990.
+```{r}
+gapminder_1990 <- gapminder %>% filter(Year > "1990" & continent %in% c("Asia", "Europe")) %>% select(continent, `Imports of goods and services (% of GDP)`) %>% drop_na()
+
+t.test(`Imports of goods and services (% of GDP)` ~ continent, data = gapminder_1990)
+```
+
+3. What is the country (or countries) that has the highest `'Population density (people per sq. km of land area)'` across all years? (i.e., which country has the highest average ranking in this category across each time point in the dataset?)
+```{r}
+gapminder %>% group_by(`Country Name`) %>% summarize(mean_popdensity = mean(`Population density (people per sq. km of land area)`)) %>% drop_na() %>% subset(mean_popdensity == max(mean_popdensity))
+```
+
+4. What country (or countries) has shown the greatest increase in `'Life expectancy at birth, total (years)'` since 1962? 
+```{r}
+gapminder %>% select(`Country Name`, Year, `Life expectancy at birth, total (years)`) %>% group_by(`Country Name`) %>% pivot_wider(names_from = Year, values_from = `Life expectancy at birth, total (years)`) %>% select(`Country Name`, `1962`, `2007`) %>% mutate(change_lifeexp = `2007` - `1962`) %>% drop_na() %>% subset(change_lifeexp == max(change_lifeexp))
+```
